build(gradle): target Java 25, do not demand a Java 25 JDK